# jarvis

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  pyproject.toml  requirements.txt
.github/workflows/: README.md  python-ci.yml  rust-ci.yml
config/: config.example.yaml  mcp.example.yaml
docs/: quickstart.md
docs/adr/: 0001-microservices-python-rust.md  README.md  _template.md
infra/: README.md
proto/: README.md  common.proto  cu.proto  llm.proto  memory.proto  safety.proto  tools.proto  voice.proto
scripts/: codegen_python.ps1  codegen_python.sh  e2e_chat_test.py  e2e_chat_test_hard.py  hardcore_runner.py  set_mcp_secret.py  setup_keyring.ps1
scripts/prompt_gen/: __init__.py  cli.py  dataset.py  generators.py  signals.py  templates.py
scripts/tests/: test_hardcore_runner.py  test_prompt_gen.py
services/jarvis-cu/: pyproject.toml
services/jarvis-cu/src/jarvis_cu/: __init__.py  main.py
services/jarvis-cu/src/jarvis_cu/proto_gen/: __init__.py  cu_pb2.py  cu_pb2_grpc.py
services/jarvis-cu/tests/: __init__.py
services/jarvis-llm/: pyproject.toml
services/jarvis-llm/src/jarvis_llm/: __init__.py  intent_classifier.py  main.py  router.py  secrets.py  server.py  tool_loop.py
services/jarvis-llm/src/jarvis_llm/clients/: __init__.py  anthropic_client.py  huggingface_client.py  ollama_client.py
services/jarvis-llm/src/jarvis_llm/proto_gen/: common_pb2.py  common_pb2.pyi  llm_pb2.py  llm_pb2.pyi  llm_pb2_grpc.py
services/jarvis-llm/tests/: __init__.py  test_clients.py  test_intent_classifier.py  test_router_execute.py  test_secrets.py  test_smoke.py  test_tool_loop.py
services/jarvis-memory/: pyproject.toml
services/jarvis-memory/src/jarvis_memory/: __init__.py  embedder.py  main.py  rag.py  reader.py  store.py  writer.py
services/jarvis-memory/src/jarvis_memory/proto_gen/: memory_pb2.py  memory_pb2_grpc.py
services/jarvis-memory/tests/: __init__.py  test_embedder.py  test_rag.py  test_store.py  test_writer_reader.py
services/jarvis-orchestrator/: pyproject.toml
services/jarvis-orchestrator/src/orchestrator/: chat.py  chat_memory.py  conversation.py  memory_bridge.py  wired_assistant.py
services/jarvis-orchestrator/src/orchestrator/clients/: __init__.py  llm_client.py  voice_client.py
services/jarvis-orchestrator/src/orchestrator/projects/: __init__.py  commands.py  scanner.py
services/jarvis-orchestrator/src/orchestrator/proto_gen/: __init__.py  llm_pb2.py  llm_pb2.pyi  llm_pb2_grpc.py  safety_pb2_grpc.py  voice_pb2.py  voice_pb2_grpc.py
services/jarvis-orchestrator/src/orchestrator/q_and_a/: __init__.py  files_answerer.py  git_answerer.py  router.py  system_answerer.py
services/jarvis-orchestrator/src/orchestrator/voice/: __init__.py  play.py  speak.py  tts.py
services/jarvis-orchestrator/tests/: test_chat_memory.py  test_conversation.py  test_memory_bridge.py  test_projects.py  test_q_and_a.py  test_q_and_a_router.py  test_smoke.py  test_voice.py  test_wired_assistant.py
services/jarvis-safety/: pyproject.toml
services/jarvis-safety/src/jarvis_safety/: __init__.py  main.py
services/jarvis-safety/src/jarvis_safety/proto_gen/: safety_pb2.py  safety_pb2.pyi
services/jarvis-safety/src/jarvis_safety/rules/: __init__.py  audit.py  blacklist.py  config.py  paths.py  rate_limit.py  redact.py
services/jarvis-safety/tests/: __init__.py  test_rules_audit.py  test_rules_blacklist.py  test_rules_config.py  test_rules_paths.py  test_rules_rate_limit.py  test_rules_redact.py
services/jarvis-tools/: pyproject.toml
services/jarvis-tools/src/jarvis_tools/: __init__.py  main.py  mcp_client.py  mcp_registry.py  secrets.py  tool_proxy.py  toolbox.py
services/jarvis-tools/src/jarvis_tools/proto_gen/: tools_pb2.py  tools_pb2_grpc.py
services/jarvis-tools/tests/: __init__.py  fake_mcp_server.py  test_integration_filesystem.py  test_mcp_client.py  test_mcp_registry.py  test_secrets.py  test_tool_proxy.py  test_toolbox.py
services/jarvis-ui/: pyproject.toml
services/jarvis-ui/src/jarvis_ui/: __init__.py  app.py  html.py  main.py  status.py
services/jarvis-ui/tests/: __init__.py  test_app.py
services/jarvis-voice/: Cargo.toml  build.rs
services/jarvis-voice/src/: main.rs
