# Cargo workspace racine — Jarvis
#
# Convention : tout service Rust vit sous services/jarvis-X/.
# Cf docs/adr/0001-microservices-python-rust.md pour la décision archi.

[workspace]
resolver = "2"
members = [
    "services/jarvis-voice",
    # "services/jarvis-safety",  # activera la partie Rust quand on commence S11
]

# Profils communs à tous les crates du workspace
[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
lto = "thin"
codegen-units = 1

# Lints partagés — appliqués via [lints.workspace = true] dans chaque crate
[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

# Versions partagées pour cohérence inter-services
[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Proprietary"
authors = ["Noah Trillon <noah.trillon28@gmail.com>"]
repository = "https://github.com/chipat-neko/jarvis"
rust-version = "1.95"

# Deps communes versionnées une seule fois ici (utilisable via workspace = true)
[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
