[project]
name = "jarvis-cu"
version = "0.1.0"
description = "Service Computer Use : Anthropic CU + OmniParser local + pyautogui"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Noah Trillon", email = "noah.trillon28@gmail.com" }]

dependencies = [
    "anthropic>=0.55",
    "pyautogui>=0.9.54",
    "mss>=10.0",
    "pillow>=11.0",
    "grpcio>=1.66",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis_cu"]
