[project]
name = "jarvis-llm"
version = "0.2.0"
description = "Service LLM 100% local via Ollama (defaut gpt-oss:120b)"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Noah Trillon", email = "noah.trillon28@gmail.com" }]

dependencies = [
    "ollama>=0.4",
    "pydantic>=2.0",
    "grpcio>=1.66",
    "grpcio-tools>=1.66",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis_llm"]
