[project]
name = "jarvis-llm"
version = "0.2.0"
description = "Service LLM 100% local via Ollama (defaut gpt-oss:120b)"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Noah Trillon", email = "noah.trillon28@gmail.com" }]

dependencies = [
    "ollama>=0.4",
    "pydantic>=2.0",
    "grpcio>=1.66",
    "grpcio-tools>=1.66",
    "loguru>=0.7",
]

[project.optional-dependencies]
# Backend HuggingFace optionnel (lourd : torch + transformers + accelerate).
# Pas requis pour l'option par defaut Ollama. Le code est ecrit pour lazy-importer
# ces modules au seul appel HF, donc l'install par defaut reste legere.
hf = [
    "torch>=2.0",
    "transformers>=4.40",
    "accelerate>=0.30",
    "safetensors>=0.4",
    # bitsandbytes pour quantization 4-bit (optionnel dans l'optionnel — uniquement Linux/Windows x64)
    "bitsandbytes>=0.43; platform_system != 'Darwin'",
]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis_llm"]
