[project]
name = "jarvis-memory"
version = "0.1.0"
description = "Service Memory : Mem0 + sqlite-vec + embeddings BGE-large local"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Noah Trillon", email = "noah.trillon28@gmail.com" }]

dependencies = [
    "mem0ai>=0.1",
    "sqlite-vec>=0.1",
    "sentence-transformers>=3.0",
    "grpcio>=1.66",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis_memory"]
