[project]
name = "jarvis-memory"
version = "0.1.0"
description = "Service Memory : SQLite local + embeddings BGE-large (lazy) pour mémoire long-terme + RAG"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Noah Trillon", email = "noah.trillon28@gmail.com" }]

# Le service tourne sans aucune dépendance externe (HashEmbedder + SQLite).
# Pour activer le vrai embedder sémantique BGE, installer l'extra "ml" :
#   pip install -e 'services/jarvis-memory[ml]'
dependencies = [
    "loguru>=0.7",
]

[project.optional-dependencies]
ml = [
    "sentence-transformers>=3.0",
    "torch>=2.0",
]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis_memory"]
