[project]
name = "jarvis-orchestrator"
version = "0.1.0"
description = "Service orchestrator : point d'entree principal + LangGraph state machine + Pipecat pipeline voice"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Noah Trillon", email = "noah.trillon28@gmail.com" }]

dependencies = [
    "langgraph>=0.3",
    "langsmith>=0.3",
    "pipecat-ai>=0.0.50",
    "grpcio>=1.66",
    "grpcio-tools>=1.66",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "python-dotenv>=1.0",
    "keyring>=25.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
jarvisd = "orchestrator.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]
