[project]
name = "jarvis-safety"
version = "0.1.0"
description = "Service Safety : kill switch endpoint + audit log SQLite + blacklist + voice confirmations"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Noah Trillon", email = "noah.trillon28@gmail.com" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "cryptography>=44.0",
    "keyring>=25.0",
    "grpcio>=1.66",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis_safety"]
