[project]
name = "jarvis-tools"
version = "0.1.0"
description = "Service MCP : wrapper pour les 8 MCP servers (filesystem, github, ha, spotify, brave, memory, notion, gmail)"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Noah Trillon", email = "noah.trillon28@gmail.com" }]

dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
    "grpcio>=1.66",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis_tools"]
