[project]
name = "jarvis-ui"
version = "0.1.0"
description = "Service UI : HUD Qt + hotkeys + systray + multi-screen routing"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Noah Trillon", email = "noah.trillon28@gmail.com" }]

dependencies = [
    "PySide6>=6.8",
    "pynput>=1.7",
    "pystray>=0.19",
    "grpcio>=1.66",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis_ui"]
