[package]
name = "jarvis-voice"
description = "Service voice pipeline temps reel (Rust) : wake word, STT, VAD, TTS, audio I/O"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "jarvis-voiced"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
